tomcat gzip-compressed response bodies appear to be broken in update 151

XMLWordPrintable

    • b01
    • x86_64
    • generic

        FULL PRODUCT VERSION :
        java version "1.7.0_80"
        Java(TM) SE Runtime Environment (build 1.7.0_80-b15)
        Java HotSpot(TM) 64-Bit Server VM (build 24.80-b11, mixed mode)


        ADDITIONAL OS VERSION INFORMATION :
        Windows 7

        A DESCRIPTION OF THE PROBLEM :
        After updating to build 151 of the Windows 1.8 JRE, our users all started reporting issues working with our embedded server - which is running the apache-tomcat-7.0.70 webserver.

        Disabling compression in the tomcat server.xml or reverting to u144 remedies the issue. Specifically:

        java version "1.8.0_144"
        Java(TM) SE Runtime Environment (build 1.8.0_144-b01)
        Java HotSpot(TM) 64-Bit Server VM (build 25.144-b01, mixed mode)

        REGRESSION. Last worked in version 8u144

        ADDITIONAL REGRESSION INFORMATION:
        java version "1.8.0_151"
        Java(TM) SE Runtime Environment (build 1.8.0_151-b12)
        Java HotSpot(TM) 64-Bit Server VM (build 25.151-b12, mixed mode)

        STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
        Install JRE 1.8 b151 on a Windows system running Tomcat with "compression" set to "true" for affected connectors.

        The response header will indicate that the transfer encoding is "gzip", but will report an error uncompressing the data.

        e.g. Chrome returns "ERR_CONTENT_DECODING_FAILED"

        EXPECTED VERSUS ACTUAL BEHAVIOR :
        EXPECTED -
        A valid, decompressed response body
        ACTUAL -
        Error decompressing the response body (e.g. ERR_CONTENT_DECODING_FAILED)

        REPRODUCIBILITY :
        This bug can be reproduced always.

        CUSTOMER SUBMITTED WORKAROUND :
        Disabling compression in Tomcat (set "compression" to "false" in server.xml)


              Assignee:
              Sean Coffey
              Reporter:
              Webbug Group
              Votes:
              1 Vote for this issue
              Watchers:
              14 Start watching this issue

                Created:
                Updated:
                Resolved: