8189789: tomcat gzip-compressed response bodies appear to be broken in update 151

Reviewed-by: sherman, phh